Add default module list, start template revisions

--- a/views/templates/404.twig
+++ b/views/templates/404.twig
@@ -1,5 +1,6 @@
 {% extends 'layouts/base.twig' %}
-
 {% block content %}
-    Sorry, we couldn't find what you're looking for.
+    <h1>404 - Page Not Found</h1>
+    <p>Sorry, we couldn't find what you're looking for. It might have been removed, renamed, or did not exist in the first place.</p>
+    <a href="{{ site.url }}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Return to Homepage</a>
 {% endblock %}
