--- a/views/layouts/base.twig
+++ b/views/layouts/base.twig
@@ -1,43 +1,34 @@
 <!DOCTYPE html>
 <html {{ site.language_attributes }}>
-    {% block head %}
-        {% include 'partials/head.twig' %}
-    {% endblock %}
+{% block head %}
+    {% include 'partials/head.twig' %}
+{% endblock %}
 
-    <body class="{{ body_class }}">
-        {{ function('wp_body_open') }}
-        <a class="skip-link screen-reader-text" href="#content">{{ _e('Skip to content') }}</a>
-        <header class="header">
-            {% block header %}
-                <div class="wrapper">
-                    <h1 class="hdr-logo">
-                        <a class="hdr-logo-link" href="{{ site.url }}">{{ site.name }}</a>
-                    </h1>
-                    <nav id="nav-main" class="nav-main">
-                        {% include 'partials/menu.twig' with {
-                            items: menu.get_items
-                        } %}
-                    </nav>
-                    <!-- #nav -->
-                </div>
+<body class="min-h-svh flex flex-col {{ body_class }}">
+{{ function('wp_body_open') }}
+<a class="skip-link absolute top-0 left-0 p-4 bg-blue-600 text-white rounded focus:outline-none focus:ring focus:ring-blue-300 -translate-y-full focus:translate-y-0 transition-transform duration-300 z-50" href="#main">{{ _e('Skip to content') }}</a>
+{% block header %}
+    <header class="header">
+        <a href="{{ site.url }}">{{ site.name }}</a>
+    </header>
+{% endblock %}
+<div class="wrap flex-1" role="document">
+    <main id="main">
+        {% if title %}
+            <h1>{{ title }}</h1>
+        {% endif %}
+        <div class="wrapper">
+            {% block content %}
+                Sorry, no content
             {% endblock %}
-        </header>
+        </div>
+    </main>
+</div>
 
-        <section id="content" class="content-wrapper">
-            {% if title %}
-                <h1>{{ title }}</h1>
-            {% endif %}
-            <div class="wrapper">
-                {% block content %}
-                    Sorry, no content
-                {% endblock %}
-            </div>
-        </section>
-
-        {% block footer %}
-            {% include 'partials/footer.twig' %}
-        {% endblock %}
-        {{ function('wp_footer') }}
-        {% do action('get_footer') %}
-    </body>
+{% block footer %}
+    {% include 'partials/footer.twig' %}
+{% endblock %}
+{{ function('wp_footer') }}
+{% do action('get_footer') %}
+</body>
 </html>
