--- a/views/partials/head.twig
+++ b/views/partials/head.twig
@@ -3,4 +3,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     {% do action('get_header') %}
     {{ function('wp_head') }}
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
