flush out the rest of the site footer module work

--- a/views/layouts/base.twig
+++ b/views/layouts/base.twig
@@ -24,8 +24,8 @@
     </main>
 </div>
 
-{% block footer %}
-    {% include 'partials/footer.twig' %}
+{% block site_footer %}
+    {% include 'partials/site-footer.twig' %}
 {% endblock %}
 {{ function('wp_footer') }}
 {% do action('get_footer') %}
