--- a/views/templates/search.twig
+++ b/views/templates/search.twig
@@ -1,11 +1,19 @@
-{# see `templates/archive.twig` for an alternative strategy of extending templates #}
 {% extends 'layouts/base.twig' %}
 
 {% block content %}
-    <div class="content-wrapper">
-        {% for post in posts %}
-            {% include ['partials/tease-' ~ post.type ~ '.twig', 'partials/tease.twig'] %}
-        {% endfor %}
+    <div>
+        <section>
+            {% for post in posts %}
+                <div class="{{ function('post_class', post) }}">
+                    <header>
+                        <h2><a href="{{ post.link }}">{{ post.title }}</a></h2>
+                    </header>
+                    <div>
+                        {{ post.excerpt }}
+                    </div>
+                </div>
+            {% endfor %}
+        </section>
 
         {% include 'partials/pagination.twig' with {
             pagination: posts.pagination({
