--- a/views/templates/singular.twig
+++ b/views/templates/singular.twig
@@ -1,16 +1,12 @@
 {% extends 'layouts/base.twig' %}
 
 {% block content %}
-    <div class="content-wrapper">
+    <div>
         <article class="{{ function('post_class') }}" id="post-{{ post.id }}">
-            <header class="article-header">
-                {% if title %}
-                    <h2 class="article-h2">{{ post.title }}</h2>
-                {% else %}
-                    <h1 class="article-h1">{{ post.title }}</h1>
-                {% endif %}
+            <header>
+                <h1>{{ post.title }}</h1>
             </header>
-            <div class="article-body">
+            <div>
                 {{ post.content }}
             </div>
         </article>
