Theme cleanup - show_admin_bar will display the admin bar for non-logged in users as well - removed tailwind classes

--- a/views/layouts/base.twig
+++ b/views/layouts/base.twig
@@ -4,13 +4,13 @@
     {% include 'partials/head.twig' %}
 {% endblock %}
 
-<body class="min-h-svh flex flex-col {{ body_class }}">
+<body class="{{ body_class }}">
 {{ function('wp_body_open') }}
-<a class="skip-link absolute top-0 left-0 p-4 bg-blue-600 text-white rounded focus:outline-none focus:ring focus:ring-blue-300 -translate-y-full focus:translate-y-0 transition-transform duration-300 z-50" href="#main">{{ _e('Skip to content') }}</a>
+<a class="skip-link" href="#main">{{ _e('Skip to content') }}</a>
 {% block site_header %}
     {% include 'partials/site-header.twig' %}
 {% endblock %}
-<div class="wrap flex-1" role="document">
+<div class="wrap" role="document">
     <main id="main">
         <div class="wrapper">
             {% block content %}
