--- a/views/templates/404.twig
+++ b/views/templates/404.twig
@@ -2,5 +2,5 @@
 {% block content %}
     <h1>404 - Page Not Found</h1>
     <p>Sorry, we couldn't find what you're looking for. It might have been removed, renamed, or did not exist in the first place.</p>
-    <a href="{{ site.url }}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Return to Homepage</a>
+    <a href="{{ site.url }}">Return to Homepage</a>
 {% endblock %}
