--- a/views/templates/search.twig
+++ b/views/templates/search.twig
@@ -4,7 +4,7 @@
     <div>
         <section>
             {% for post in posts %}
-                <div class="{{ function('post_class', post) }}">
+                <div {{ function('post_class', post) }}>
                     <header>
                         <h2><a href="{{ post.link }}">{{ post.title }}</a></h2>
                     </header>
