--- a/views/layouts/base.twig
+++ b/views/layouts/base.twig
@@ -6,7 +6,9 @@
 
 <body class="{{ body_class }}">
 {{ function('wp_body_open') }}
-<a class="skip-link" href="#main">{{ _e('Skip to content') }}</a>
+{% block skitp_to_content %}
+    {% include 'elements/skip-to-content.twig' %}
+{% endblock %}
 {% block site_header %}
     {% include 'partials/site-header.twig' %}
 {% endblock %}
