--- a/modules/Theme/assets/styles/css/skip-to-content.css
+++ b/modules/Theme/assets/styles/css/skip-to-content.css
@@ -1,4 +1,3 @@
-
 .skip-to-content {
     position: absolute;
     display: inline-block;
@@ -13,23 +12,22 @@
     opacity: 0;
     transition: transform 250ms, opacity 250ms;
     transform: translateX(-100%);
-}
 
-.skip-to-content::-moz-focus-inner {
-    border: 0;
-    padding: 0;
-}
+    &::-moz-focus-inner {
+        border: 0;
+        padding: 0;
+    }
 
-.skip-to-content:focus, .skip-to-content:active {
-    position: absolute;
-    overflow: auto;
-    height: auto;
-    width: auto;
-    z-index: 9999;
-    outline: 0;
-    top: 5px;
-    transform: translateX(0);
-    left: 3px;
-    opacity: 1;
+    &:focus, &:active {
+        position: absolute;
+        overflow: auto;
+        height: auto;
+        width: auto;
+        z-index: 9999;
+        outline: 0;
+        top: 5px;
+        transform: translateX(0);
+        left: 3px;
+        opacity: 1;
+    }
 }
-
