--- a/modules/Theme/assets/styles/core.css
+++ b/modules/Theme/assets/styles/core.css
@@ -1,5 +1,5 @@
-@import "css/_reset.css";
-@import "css/globals.css";
-@import "css/utilities.css";
-@import "css/block-library.css";
-@import "css/skip-to-content.css";
+@import 'css/_reset.css';
+@import 'css/globals.css';
+@import 'css/utilities.css';
+@import 'css/block-library.css';
+@import 'css/skip-to-content.css';
