--- a/modules/Theme/assets/styles/css/_reset.css
+++ b/modules/Theme/assets/styles/css/_reset.css
@@ -13,8 +13,16 @@ html {
 }
 
 /* Remove default margin in favour of better control in authored CSS */
-body, h1, h2, h3, h4, p,
-figure, blockquote, dl, dd {
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
     margin-block-end: 0;
 }
 
@@ -30,13 +38,20 @@ body {
 }
 
 /* Set shorter line heights on headings and interactive elements */
-h1, h2, h3, h4,
-button, input, label {
+h1,
+h2,
+h3,
+h4,
+button,
+input,
+label {
 }
 
 /* Balance text wrapping on headings */
-h1, h2,
-h3, h4 {
+h1,
+h2,
+h3,
+h4 {
     text-wrap: balance;
 }
 
@@ -54,8 +69,10 @@ picture {
 }
 
 /* Inherit fonts for inputs and buttons */
-input, button,
-textarea, select {
+input,
+button,
+textarea,
+select {
     font-family: inherit;
     font-size: inherit;
 }
@@ -69,4 +86,3 @@ textarea:not([rows]) {
 :target {
     scroll-margin-block: 5ex;
 }
-
