Refactored content partial modules and fixed premature post content render

--- a/views/partials/site-footer.twig
+++ b/views/partials/site-footer.twig
@@ -1,7 +1,7 @@
 <footer class="site-footer">
     <div class="site-footer__container wp-site-blocks is-layout-constrained">
         {% if site_footer %}
-            {{ site_footer['content'] }}
+            {{ site_footer.content }}
         {% else %}
             {# Default to the Default #}
             Footer Default
