--- a/views/partials/site-header.twig
+++ b/views/partials/site-header.twig
@@ -1,5 +1,5 @@
 {% if site_header %}
-    {{ site_header['content'] }}
+    {{ site_header.content }}
 {% else %}
     <header class="site-header">
         <div class="site-header__container">
