Adjust padding, spacing

--- a/views/templates/singular.twig
+++ b/views/templates/singular.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <article {{ function('post_class') }} id="post-{{ post.id }}">
-        <div class="wp-site-blocks is-layout-constrained">
+        <div class="wp-site-blocks has-global-padding is-layout-constrained">
             {{ post.content }}
         </div>
     </article>
