--- a/views/partials/site-footer.twig
+++ b/views/partials/site-footer.twig
@@ -1,5 +1,5 @@
 <footer class="site-footer">
-    <div class="site-footer__container wp-site-blocks is-layout-constrained">
+    <div class="site-footer__container wp-site-blocks has-global-padding is-layout-constrained">
         {% if site_footer %}
             {{ site_footer.content }}
         {% else %}
