--- a/views/partials/site-header.twig
+++ b/views/partials/site-header.twig
@@ -1,12 +1,5 @@
 {% if site_header %}
-    {{ site_header.content }}
+    {% include 'partials/site-header-content.twig' %}
 {% else %}
-    <header class="site-header">
-        <div class="site-header__container">
-            <a href="/"><img src="" alt="" /></a>
-            <img src="" alt="" />
-            <a href="{{ site.url }}">{{ site.name }}</a>
-        </div>
-    </header>
+    {% include 'partials/site-header-default.twig' %}
 {% endif %}
-    
