style the overlay and sticky site-header state (still need to fix main.mjs, body class not getting applied atm)

--- a/views/partials/site-header-content.twig
+++ b/views/partials/site-header-content.twig
@@ -1,7 +1,7 @@
 {% set header_classes = [
     'site-header',
     site_header.is_overlaid ? 'site-header--overlay',
-    site_header.is_sticky ? 'site-header--is-sticky',
+    site_header.is_sticky ? 'site-header--sticky',
 ] %}
 
 <header class="{{ header_classes|join(' ')|trim }}">
