make editor-dark-mode css specific to content partial editor

--- a/modules/SiteHeader/assets/styles/editor-dark-mode.css
+++ b/modules/SiteHeader/assets/styles/editor-dark-mode.css
@@ -1,4 +1,4 @@
 /* Dark background for Gutenberg editor content area */
-.editor-styles-wrapper {
+body.post-type-content-partial .editor-styles-wrapper {
     background-color: #777 !important;
 }
