Start kadence spacing alignment

--- a/modules/Theme/assets/styles/core.css
+++ b/modules/Theme/assets/styles/core.css
@@ -2,4 +2,5 @@
 @import 'css/globals.css';
 @import 'css/utilities.css';
 @import 'css/block-library.css';
+@import 'css/kadence-blocks.css';
 @import 'css/skip-to-content.css';
