update block wrapper attributes usage

--- a/modules/ContentPartial/blocks/content-partial-block/block.twig
+++ b/modules/ContentPartial/blocks/content-partial-block/block.twig
@@ -1,3 +1,3 @@
-<div {{ fn('get_block_wrapper_attributes', wrapper_attributes) }}>
+<div {{ block_wrapper_attributes() }}>
 {{ partial_post.content }}
 </div>
