--- a/modules/ContentPartial/blocks/content-partial-block/block.twig
+++ b/modules/ContentPartial/blocks/content-partial-block/block.twig
@@ -1,3 +1,3 @@
-<div {{ block_wrapper_attributes() }}>
+<div {{ block_wrapper_attributes({'class': 'wp-block-group has-global-padding is-layout-constrained wp-block-group-is-layout-constrained' }) }}>
 {{ partial_post.content }}
 </div>
