--- a/modules/Theme/assets/styles/css/kadence-blocks.css
+++ b/modules/Theme/assets/styles/css/kadence-blocks.css
@@ -2,9 +2,14 @@
     --global-row-gutter-md: var(--wp--custom--grid-gutter-spacing);
 }
 
-.kt-inside-inner-col > *,
-.kadence-inner-column-inner > *,
-.kt-tab-inner-content-inner > * {
+/* Front End, inside column */
+:where(.kt-inside-inner-col > *),
+/* Preview, inside column, handles different preview structure  */
+:where(.kadence-inner-column-inner > *:not(.kadence-column)),
+:where(.kadence-inner-column-inner > .kadence-column > .kadence-inner-column-inner),
+/* Global, inside tab, handles different preview structure */
+:where(.kt-tab-inner-content-inner > *:not(.kadence-column)),
+:where(.kt-tab-inner-content-inner > .kadence-column > .kadence-inner-column-inner) {
     margin-block-start: var(--wp--custom--content-spacing);
     margin-block-end: 0;
 
