--- a/modules/ContentSlider/blocks/content-slider/style.css
+++ b/modules/ContentSlider/blocks/content-slider/style.css
@@ -6,6 +6,9 @@
  */
 
 .sc-content-slider {
+    /* Define default CSS variables */
+    --wp--custom--carousel-gap: var(--wp--preset--spacing--30, 1.5rem);
+
     position: relative;
     width: 100%;
 }
