--- a/modules/KadenceBlocks/assets/styles/main/column.css
+++ b/modules/KadenceBlocks/assets/styles/main/column.css
@@ -74,11 +74,17 @@
  * Layout blocks (rows, groups, images) manage their own spacing.
  */
 .kt-column-has-bg > .kt-inside-inner-col {
-    --kb-padding-top: var(--wp--custom--container-inset);
+    --kb-padding-top: var(--wp--custom--column-inset-y);
     --kb-padding-left: var(--wp--custom--container-inset);
     --kb-padding-right: var(--wp--custom--container-inset);
-    --kb-padding-bottom: var(--wp--custom--container-inset);
+    --kb-padding-bottom: var(--wp--custom--column-inset-y);
     padding: var(--kb-padding-top) var(--kb-padding-right) var(--kb-padding-bottom) var(--kb-padding-left);
+    > .alignfull {
+        margin-left: calc(-1 * var(--kb-padding-left));
+        margin-right: calc(-1 * var(--kb-padding-right));
+    }
+}
+.kt-inside-inner-col {
     > .alignfull {
         margin-left: calc(-1 * var(--kb-padding-left));
         margin-right: calc(-1 * var(--kb-padding-right));
